<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="br.com.mariana.take_a_break.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.com.mariana.take_a_break.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.com.mariana.take_a_break.ui.settings.SettingsFragmentOld"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="br.com.mariana.take_a_break.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>